// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp component tests should match with snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`GifExpertApp component tests should show a categories list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Hunter x Hunter"
      key="Hunter x Hunter"
    />
    <GifGrid
      category="Sana"
      key="Sana"
    />
  </ol>
</Fragment>
`;
